clusters/k4/kubernetes/apps/system/node-feature-discovery/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: node-feature-discovery
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: node-feature-discovery
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
